Fix scrollbar color

--- a/src/app/file-scroller/file-scroller.component.scss
+++ b/src/app/file-scroller/file-scroller.component.scss
@@ -36,7 +36,7 @@
     background-clip: content-box;
 
     &:hover {
-      background-color: #acb7c1;
+      background-color: #87929d;
     }
   }
 }
