--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@
   --button-drop-shadow-size: 1px;
   --default-font-family: 'Arial', sans-serif;
   --light-gray-color: #e5ebf1;
-  --gray-color: #c5cfd9;
+  --gray-color: #a2abb5;
   --dark-gray-color: #53595f;
   --blue-color: #4354cb;
   --border: var(--border-size) solid var(--dark-gray-color);
